--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,5 +7,12 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+    show-sql: true
+logging:
+  level:
+    net:
+      ttddyy:
+        dsproxy:
+          listener: debug
 server:
   port: 8080
